--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,26 +18,17 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '8.0.x'
-
-      - name: Print working directory
-        run: pwd
-
-      - name: List files
-        run: ls -R
+          dotnet-version: '8.0.x' 
 
       - name: Restore dependencies
-        run: dotnet restore "SimpleCalculator/SimpleCalculator.sln"
+        run: dotnet restore SimpleCalculator.sln
 
       - name: Build
-        run: dotnet build --configuration Release "SimpleCalculator/SimpleCalculator.sln"
+        run: dotnet build --configuration Release SimpleCalculator.sln
 
   test:
     runs-on: ubuntu-latest
     needs: build
-    strategy:
-      matrix:
-        configuration: [Debug, Release]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -46,15 +37,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
-          
-      - name: Print working directory
-        run: pwd
-        
-      - name: List files
-        run: ls -R
 
       - name: Restore dependencies
-        run: dotnet restore "SimpleCalculator/SimpleCalculator.sln"
+        run: dotnet restore SimpleCalculator.sln
 
       - name: Run tests
-        run: dotnet test --configuration ${{ matrix.configuration }} "SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj"
+        run: dotnet test --configuration Release SimpleCalculator.sln
