--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,10 @@ jobs:
 
       - name: Add .NET tools to PATH
         run: echo "$(dotnet tool path --global)" >> $GITHUB_PATH
-      
+
       - name: Run static code analysis
-        run: dotnet sonarscanner begin /k:"your_project_key" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.login="$SONAR_TOKEN"
-      
+        run: dotnet sonarscanner begin /k:"your_project_key" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+
       - name: Build
         run: dotnet build SimpleCalculator.sln
 
@@ -75,4 +75,4 @@ jobs:
         run: dotnet test SimpleCalculator.sln
 
       - name: End analysis
-        run: dotnet sonarscanner end -d:sonar.login="$SONAR_TOKEN"
+        run: dotnet sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
