--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,9 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release SimpleCalculator.sln
 
-  test:
+  test_debug:
     runs-on: ubuntu-latest
     needs: build
-    strategy:
-      matrix:
-        configuration: [Debug, Release]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -44,10 +41,10 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore SimpleCalculator.sln
 
-      - name: Run tests
-        run: dotnet test --configuration ${{ matrix.configuration }} SimpleCalculator.sln
+      - name: Run tests in Debug configuration
+        run: dotnet test --configuration Debug SimpleCalculator.sln
 
-  analyze:
+  test_release:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -59,20 +56,32 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
+      - name: Restore dependencies
+        run: dotnet restore SimpleCalculator.sln
+
+      - name: Run tests in Release configuration
+        run: dotnet test --configuration Release SimpleCalculator.sln
+
+  analyze_code:
+    runs-on: ubuntu-latest
+    needs: build  
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore SimpleCalculator.sln
+
       - name: Install SonarScanner
         run: dotnet tool install --global dotnet-sonarscanner
 
-      - name: Add .NET tools to PATH
-        run: echo "$(dotnet tool path --global)" >> $GITHUB_PATH
-
-      - name: Run static code analysis
-        run: dotnet sonarscanner begin /k:"your_project_key" -d:sonar.host.url="https://sonarcloud.io" -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-
-      - name: Build
-        run: dotnet build SimpleCalculator.sln
-
-      - name: Run tests
-        run: dotnet test SimpleCalculator.sln
-
-      - name: End analysis
-        run: dotnet sonarscanner end -d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+      - name: Run SonarScanner analysis
+        run: |
+          dotnet sonarscanner begin /k:"your_project_key" /d:sonar.host.url="your_sonar_url" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          dotnet build --configuration Release SimpleCalculator.sln
+          dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
