--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,12 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release SimpleCalculator.sln
 
+      - name: Install dotnet format tool
+        run: dotnet tool install -g dotnet-format
+
+      - name: Run code format
+        run: dotnet format SimpleCalculator.sln --check --verbosity diagnostic
+
   test_debug:
     runs-on: ubuntu-latest
     needs: build
@@ -61,27 +67,3 @@ jobs:
 
       - name: Run tests in Release configuration
         run: dotnet test --configuration Release SimpleCalculator.sln
-
-  analyze_code:
-    runs-on: ubuntu-latest
-    needs: build  
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Restore dependencies
-        run: dotnet restore SimpleCalculator.sln
-
-      - name: Install SonarScanner
-        run: dotnet tool install --global dotnet-sonarscanner
-
-      - name: Run SonarScanner analysis
-        run: |
-          dotnet sonarscanner begin /k:"your_project_key" /d:sonar.host.url="your_sonar_url" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-          dotnet build --configuration Release SimpleCalculator.sln
-          dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
