--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,7 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release SimpleCalculator.sln
 
-      - name: Install dotnet format tool
-        run: dotnet tool install -g dotnet-format
-
-      - name: Run code format
-        run: dotnet format SimpleCalculator.sln --check --verbosity diagnostic
-
-  test_debug:
+  test:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -50,7 +44,10 @@ jobs:
       - name: Run tests in Debug configuration
         run: dotnet test --configuration Debug SimpleCalculator.sln
 
-  test_release:
+      - name: Run tests in Release configuration
+        run: dotnet test --configuration Release SimpleCalculator.sln
+
+  code_analysis:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -65,5 +62,8 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore SimpleCalculator.sln
 
-      - name: Run tests in Release configuration
-        run: dotnet test --configuration Release SimpleCalculator.sln
+      - name: Install dotnet format tool
+        run: dotnet tool install -g dotnet-format
+
+      - name: Run code analysis
+        run: dotnet format SimpleCalculator.sln --check --verbosity diagnostic
