--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,4 +66,4 @@ jobs:
         run: dotnet tool install -g dotnet-format
 
       - name: Run code analysis
-        run: dotnet format SimpleCalculator.sln --check --verbosity diagnostic
+        run: dotnet format SimpleCalculator.sln style --verify-no-changes --verbosity diagnostic
