--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: [6.0.x, 7.0.x, 8.0.x]
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -18,7 +22,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: ${{ matrix.dotnet-version }}
 
       - name: Restore dependencies
         run: dotnet restore SimpleCalculator.sln
@@ -29,6 +33,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
+    strategy:
+      matrix:
+        dotnet-version: [6.0.x, 7.0.x, 8.0.x]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -36,34 +44,10 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: ${{ matrix.dotnet-version }}
 
       - name: Restore dependencies
         run: dotnet restore SimpleCalculator.sln
 
-      - name: Run tests in Debug configuration
-        run: dotnet test --configuration Debug SimpleCalculator.sln
-
-      - name: Run tests in Release configuration
+      - name: Run tests
         run: dotnet test --configuration Release SimpleCalculator.sln
-
-  code_analysis:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Restore dependencies
-        run: dotnet restore SimpleCalculator.sln
-
-      - name: Install dotnet format tool
-        run: dotnet tool install -g dotnet-format
-
-      - name: Run code analysis
-        run: dotnet format SimpleCalculator.sln style --verify-no-changes --verbosity diagnostic
